rename to reactpy + use anywidget

--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -1,17 +1,16 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# What is IDOM?\n",
+    "# What is ReactPy?\n",
     "\n",
-    "IDOM connects your Python web framework of choice to a ReactJS frontend, allowing you to create **interactive websites without needing JavaScript!**\n",
+    "ReactPy connects your Python web framework of choice to a ReactJS frontend, allowing you to create **interactive websites without needing JavaScript!**\n",
     "\n",
-    "Following ReactJS styling, web elements are combined into [reusable \"components\"](https://idom-docs.herokuapp.com/docs/guides/creating-interfaces/your-first-components/index.html#parametrizing-components). These components can utilize [hooks](https://idom-docs.herokuapp.com/docs/reference/hooks-api.html) and [events](https://idom-docs.herokuapp.com/docs/guides/adding-interactivity/responding-to-events/index.html#async-event-handlers) to create infinitely complex web pages.\n",
+    "Following ReactJS styling, web elements are combined into [reusable \"components\"](https://reactpy-docs.herokuapp.com/docs/guides/creating-interfaces/your-first-components/index.html#parametrizing-components). These components can utilize [hooks](https://reactpy-docs.herokuapp.com/docs/reference/hooks-api.html) and [events](https://reactpy-docs.herokuapp.com/docs/guides/adding-interactivity/responding-to-events/index.html#async-event-handlers) to create infinitely complex web pages.\n",
     "\n",
-    "When needed, IDOM can [use components directly from NPM](https://idom-docs.herokuapp.com/docs/guides/escape-hatches/javascript-components.html#dynamically-loaded-components). For additional flexibility, components can also be [fully developed in JavaScript](https://idom-docs.herokuapp.com/docs/guides/escape-hatches/javascript-components.html#custom-javascript-components).\n",
+    "When needed, ReactPy can [use components directly from NPM](https://reactpy-docs.herokuapp.com/docs/guides/escape-hatches/javascript-components.html#dynamically-loaded-components). For additional flexibility, components can also be [fully developed in JavaScript](https://reactpy-docs.herokuapp.com/docs/guides/escape-hatches/javascript-components.html#custom-javascript-components).\n",
     "\n",
     "\n",
     "# Getting Started\n",
@@ -21,13 +20,13 @@
     "1. At the top of your notebook run\n",
     "\n",
     "   ```python\n",
-    "   import idom_jupyter\n",
+    "   import reactpy_jupyter\n",
     "   ```\n",
     "\n",
-    "2. Register `idom_jupyter` as a permanant IPython extension in [your config file](https://ipython.readthedocs.io/en/stable/config/intro.html#introduction-to-ipython-configuration):\n",
+    "2. Register `reactpy_jupyter` as a permanant IPython extension in [your config file](https://ipython.readthedocs.io/en/stable/config/intro.html#introduction-to-ipython-configuration):\n",
     "\n",
     "   ```python\n",
-    "   c.InteractiveShellApp.extensions = ['idom_jupyter']\n",
+    "   c.InteractiveShellApp.extensions = ['reactpy_jupyter']\n",
     "   ```\n",
     "\n",
     "For the purposes of this tutorial, you'll want to do the first:"
@@ -36,10 +35,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "import idom_jupyter"
+    "import reactpy_jupyter"
    ]
   },
   {
@@ -48,16 +49,18 @@
    "source": [
     "# At a Glance\n",
     "\n",
-    "To get a rough idea of how to write apps in IDOM, take a look at the tiny [“hello world”](https://en.wikipedia.org/wiki/%22Hello,_World!%22_program) application below:"
+    "To get a rough idea of how to write apps in ReactPy, take a look at the tiny [“hello world”](https://en.wikipedia.org/wiki/%22Hello,_World!%22_program) application below:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "from idom import component, html, run\n",
+    "from reactpy import component, html, run\n",
     "\n",
     "\n",
     "@component\n",
@@ -74,9 +77,9 @@
    "source": [
     "# Creating Interfaces\n",
     "\n",
-    "IDOM is a Python package for making user interfaces (UI). These interfaces are built from small elements of functionality like buttons text and images. IDOM allows you to combine these elements into reusable “components”. Once you learn how these UI elements are created and organized into components you'll be able to do things like create interfaces from raw data:\n",
+    "ReactPy is a Python package for making user interfaces (UI). These interfaces are built from small elements of functionality like buttons text and images. ReactPy allows you to combine these elements into reusable “components”. Once you learn how these UI elements are created and organized into components you'll be able to do things like create interfaces from raw data:\n",
     "\n",
-    "<a href=\"https://idom-docs.herokuapp.com/docs/creating-interfaces/index.html\" target=\"_blank\"><button>Read More!</button></a>"
+    "<a href=\"https://reactpy-docs.herokuapp.com/docs/creating-interfaces/index.html\" target=\"_blank\"><button>Read More!</button></a>"
    ]
   },
   {
@@ -85,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from idom import component, html\n",
+    "from reactpy import component, html\n",
     "\n",
     "\n",
     "@component\n",
@@ -94,7 +97,7 @@
     "        items = [i for i in items if i[\"priority\"] <= filter_by_priority]\n",
     "    if sort_by_priority:\n",
     "        items = list(sorted(items, key=lambda i: i[\"priority\"]))\n",
-    "    list_item_elements = [html.li(i[\"text\"], key=i[\"id\"]) for i in items]\n",
+    "    list_item_elements = [html.li({\"key\": i[\"id\"]}, i[\"text\"]) for i in items]\n",
     "    return html.ul(list_item_elements)\n",
     "\n",
     "\n",
@@ -125,9 +128,9 @@
    "source": [
     "# Adding Interactivity\n",
     "\n",
-    "Components often need to change what’s on the screen as a result of an interaction. For example, typing into the form should update the input field, clicking a “Comment” button should bring up a text input field, clicking “Buy” should put a product in the shopping cart. Components need to “remember” things like the current input value, the current image, the shopping cart. In IDOM, this kind of component-specific memory is created and updated with a “hook” called use_state() that creates a state variable and state setter respectively:\n",
+    "Components often need to change what’s on the screen as a result of an interaction. For example, typing into the form should update the input field, clicking a “Comment” button should bring up a text input field, clicking “Buy” should put a product in the shopping cart. Components need to “remember” things like the current input value, the current image, the shopping cart. In ReactPy, this kind of component-specific memory is created and updated with a “hook” called use_state() that creates a state variable and state setter respectively:\n",
     "\n",
-    "<a href=\"https://idom-docs.herokuapp.com/docs/adding-interactivity/index.html\" target=\"_blank\"><button>Read More!</button></a>"
+    "<a href=\"https://reactpy-docs.herokuapp.com/docs/adding-interactivity/index.html\" target=\"_blank\"><button>Read More!</button></a>"
    ]
   },
   {
@@ -139,7 +142,7 @@
     "import json\n",
     "from pathlib import Path\n",
     "\n",
-    "from idom import component, use_state, html\n",
+    "from reactpy import component, use_state, html\n",
     "\n",
     "\n",
     "DATA_PATH = Path().parent / \"data\" / \"gallery-data.json\"\n",
@@ -174,13 +177,12 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using IDOM With Jupyter Widgets\n",
+    "# Using ReactPy With Jupyter Widgets\n",
     "\n",
-    "While you can use IDOM components independently, it may also be useful to integrate them with the rest of the Jupyter Widget ecosystem. Let's consider an IDOM component that responds to and displays changes from an `ipywidgets.IntSlider`. The IDOM component will need to accept an `IntSlider` instance as one of its arguments, declare state that will track the slider's value, and register a lister that will update that state via the slider's `IntSlider.observe()` method using an [\"effect\"](https://idom-docs.herokuapp.com/docs/reference/hooks-api.html#use-effect):"
+    "While you can use ReactPy components independently, it may also be useful to integrate them with the rest of the Jupyter Widget ecosystem. Let's consider an ReactPy component that responds to and displays changes from an `ipywidgets.IntSlider`. The ReactPy component will need to accept an `IntSlider` instance as one of its arguments, declare state that will track the slider's value, and register a lister that will update that state via the slider's `IntSlider.observe()` method using an [\"effect\"](https://reactpy-docs.herokuapp.com/docs/reference/hooks-api.html#use-effect):"
    ]
   },
   {
@@ -189,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from idom import use_effect\n",
+    "from reactpy import use_effect\n",
     "\n",
     "\n",
     "@component\n",
@@ -207,15 +209,14 @@
     "        # unobserve the slider's value if this component is no longer displayed\n",
     "        return lambda: slider.unobserve(handle_change, \"value\")\n",
     "\n",
-    "    return html.p(f\"IDOM observes the value to be: \", value)"
+    "    return html.p(f\"ReactPy observes the value to be: \", value)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now you'll need to display the `SliderObserver` component as well as an `IntSlider` widget. To do this, you'll want wrap the component in a `idom_jupyter.LayoutWidget` instance before using it alongside other Jupyter Widgets. Specifically, you'll be displaying the `SliderObserver` and `IntSlider` in a `Box`:\n"
+    "Now you'll need to display the `SliderObserver` component as well as an `IntSlider` widget. To do this, you'll want wrap the component in a `reactpy_jupyter.LayoutWidget` instance before using it alongside other Jupyter Widgets. Specifically, you'll be displaying the `SliderObserver` and `IntSlider` in a `Box`:\n"
    ]
   },
   {
@@ -225,7 +226,7 @@
    "outputs": [],
    "source": [
     "from ipywidgets import Box, IntSlider\n",
-    "from idom_jupyter import LayoutWidget\n",
+    "from reactpy_jupyter import LayoutWidget\n",
     "\n",
     "slider = IntSlider(readout=False)\n",
     "slider_observer = LayoutWidget(SliderObserver(slider))\n",
@@ -234,11 +235,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If it becomes painful to wrap every IDOM component in a `LayoutWidget` you can create an alternate `LayoutWidget` constructor using `idom_jupyter.widgetize`:"
+    "If it becomes painful to wrap every ReactPy component in a `LayoutWidget` you can create an alternate `LayoutWidget` constructor using `reactpy_jupyter.widgetize`:"
    ]
   },
   {
@@ -247,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from idom_jupyter import widgetize\n",
+    "from reactpy_jupyter import widgetize\n",
     "\n",
     "SliderObserverWidget = widgetize(SliderObserver)\n",
     "\n",
@@ -258,11 +258,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It's worth noting that, while IDOM can be used with Jupyter Widgets, the reverse is not true. That is, **you cannot using a Jupyter Widget inside an IDOM component**. If this is a capability you would find useful, please [start a discussion](https://github.com/idom-team/idom/discussions). The IDOM team would be very interested to hear how allowing Jupyter Widgets to be used with IDOM could facilitate your work."
+    "It's worth noting that, while ReactPy can be used with Jupyter Widgets, the reverse is not true. That is, **you cannot using a Jupyter Widget inside an ReactPy component**. If this is a capability you would find useful, please [start a discussion](https://github.com/reactive-python/reactpy/discussions). The ReactPy team would be very interested to hear how allowing Jupyter Widgets to be used with ReactPy could facilitate your work."
    ]
   },
   {
@@ -271,9 +270,9 @@
    "source": [
     "# Javascript Integration\n",
     "\n",
-    "While IDOM is a great tool for displaying HTML and responding to browser events with pure Python, there are other projects which already allow you to do this inside Jupyter Notebooks or in standard web apps. The real power of IDOM comes from its ability to seamlessly leverage the existing Javascript ecosystem:\n",
+    "While ReactPy is a great tool for displaying HTML and responding to browser events with pure Python, there are other projects which already allow you to do this inside Jupyter Notebooks or in standard web apps. The real power of ReactPy comes from its ability to seamlessly leverage the existing Javascript ecosystem:\n",
     "\n",
-    "<a href=\"https://idom-docs.herokuapp.com/docs/escape-hatches/javascript-components.html\" target=\"_blank\"><button>Read More!</button></a>"
+    "<a href=\"https://reactpy-docs.herokuapp.com/docs/escape-hatches/javascript-components.html\" target=\"_blank\"><button>Read More!</button></a>"
    ]
   },
   {
@@ -282,7 +281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from idom import component, web\n",
+    "from reactpy import component, web\n",
     "\n",
     "\n",
     "victory = web.module_from_template(\"react\", \"victory-bar\", fallback=\"⌛\")\n",
@@ -302,13 +301,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [Learn More!](https://idom-docs.herokuapp.com)"
+    "# [Learn More!](https://reactpy-docs.herokuapp.com)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -322,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.1"
   },
   "vscode": {
    "interpreter": {
